# Bocuse

./: .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml
Bocuse/: configs.py  main.py
Bocuse/core/: exceptions.py  ficha_tecnica.py  google_api.py  token.json  utils.py
Menu/: main.py
Menu/core/: credentials.json  ficha_tecnica.py  google_api.py  token.json
docker/: dockerfile
menu/: main.py
menu/core/: credentials.json  google_api.py  token.json
menu/tests/: test_bolo.csv  test_google_api.py  test_main.py
scripts/: start-lint.sh  start-tests.sh
source/: main.py
source/core/: google_api.py  token.json
source/tests/: test_bolo.csv  test_google_api.py  test_main.py
tests/: test_main.py  test_pact.py  verify_pacts.py
tests/core/: test_exceptions.py  test_ficha_tecnica.py  test_google_api.py  test_utils.py
tests/fixtures/vcr_cassettes/: all_sheets.yml  cardapio.yml  ficha_tecnica_teste_bolo.yml  ficha_tecnica_teste_bolo_404.yml  receita_teste_bolo.yml  receita_teste_bolo_404.yml  search_ficha_tecnica.yml  search_receita.yml  sheet_teste_bolo.yml  sheet_teste_bolo_equipamentos.yml  sheet_teste_bolo_ingredientes.yml  sheet_teste_bolo_preparo.yml  sheet_teste_fails_when_passing_non_existent_page_name.yml
tests/pacts/: Consumer-Lola-Provider-Menu-pact.json
